# mw-worker

./: .gitignore  Cargo.toml  README.md  requirements.txt
src/: categories.rs  check_names.rs  file_name_parser.rs  files_utils.rs  final_checker.rs  main.rs  services.rs  utils.rs
src/autocorr/: auto_correct_request.rs  error.rs  mod.rs  photos.rs
src/autocorr/photos/: correct_slides.rs
src/autocorr/photos/correct_slides/: error.rs  shell_slide_correct.py
src/handlers/: jobs.rs  mod.rs
src/handlers/jobs/: error.rs
src/qc/: fc.rs  final_check.rs  mod.rs
src/qc/fc/: error.rs  file_names.rs  media_file.rs  media_groups.rs  photo_group_options.rs
src/qc/fc/file_names/: error.rs
src/qc/fc/media_file/: error.rs
src/qc/fc/media_groups/: error.rs
src/qc/final_check/: error.rs  final_check_request.rs  media_file.rs  media_folder.rs  media_groups.rs  photo_group_options.rs
src/qc/final_check/media_file/: error.rs
src/qc/final_check/media_groups/: error.rs
src/utils/: send_text.rs  types.rs
src/utils/types/: file_extension_type.rs  media_types.rs  scan_type.rs
src/utils/types/media_types/: error.rs  photo_media_data.rs
src/utils/types/media_types/photo_media_data/: error.rs
